--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: rust
-os: osx
 cache: cargo
-rust:
-  - stable
-  - 1.31.0
+matrix:
+  include:
+    - os: linux
+      rust: stable
+    - os: linux
+      rust: 1.31.0
+    - os: osx
+      rust: stable
+    - os: osx
+      rust: 1.31.0
 script:
   - cargo run
